--- a/HTML/VEHPAGE.html
+++ b/HTML/VEHPAGE.html
@@ -9,8 +9,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <!-- External Firebase Configuration Script -->
-    <script src="FIREBASE.JS"></script>
+
+    <script src="./FIREBASE.JS"></script>
 </head>
 <body>
     <div class="dashboard">
@@ -96,6 +96,6 @@
         </main>
     </div>
 
-    <script src="VEHPAGE.js"></script>
+    <script src="./VEHPAGE.JS"></script>
 </body>
 </html>
