--- a/HTML/DTEPAGE2.html
+++ b/HTML/DTEPAGE2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Vehicle Details</title>
-    <link rel="stylesheet" href="DTEPAGE2.css">
+    <link rel="stylesheet" href="./DTEPAGE2.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/Screenshot 2025-01-29 172915.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -16,7 +16,7 @@
     <div class="container">
         <header class="header">
             <div class="header-content">
-                <button onclick="location.href='VEHPAGE.html'" class="back-btn">
+                <button onclick="location.href='./VEHPAGE.html'" class="back-btn">
                     <i class="fas fa-arrow-left"></i>
                     Back to Dashboard
                 </button>
@@ -135,7 +135,7 @@
         </div>
     </div>
     
-    <script src="FIREBASE.JS"></script>
-    <script src="DTEPAGE2.js"></script>
+    <script src="./FIREBASE.JS"></script>
+    <script src="./DTEPAGE2.js"></script>
 </body>
 </html>
