--- a/HTML/DTEPAGE2.html
+++ b/HTML/DTEPAGE2.html
@@ -61,41 +61,41 @@
                         <div class="input-group">
                             <label for="permitDate">
                                 <i class="fas fa-id-card"></i>
-                                PERMIT DATE
+                                PERMIT DATE (Optional)
                             </label>
-                            <input id="permitDate" type="date" required>
+                            <input id="permitDate" type="date">
                         </div>
 
                         <div class="input-group">
                             <label for="fcDate">
                                 <i class="fas fa-calendar"></i>
-                                FC DATE
+                                FC DATE (Optional)
                             </label>
-                            <input id="fcDate" type="date" required>
+                            <input id="fcDate" type="date">
                         </div>
 
                         <div class="input-group">
                             <label for="icDate">
                                 <i class="fas fa-calendar-check"></i>
-                                IC DATE
+                                IC DATE (Optional)
                             </label>
-                            <input id="icDate" type="date" required>
+                            <input id="icDate" type="date">
                         </div>
 
                         <div class="input-group">
                             <label for="taxDate">
                                 <i class="fas fa-file-invoice-dollar"></i>
-                                TAX DATE
+                                TAX DATE (Optional)
                             </label>
-                            <input id="taxDate" type="date" required>
+                            <input id="taxDate" type="date">
                         </div>
 
                         <div class="input-group">
                             <label for="greenTaxDate">
                                 <i class="fas fa-leaf"></i>
-                                GREEN TAX DATE
+                                GREEN TAX DATE (Optional)
                             </label>
-                            <input id="greenTaxDate" type="date" required>
+                            <input id="greenTaxDate" type="date">
                         </div>
 
                         <div class="input-group">
