--- a/HTML/VEHPAGE.html
+++ b/HTML/VEHPAGE.html
@@ -16,7 +16,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <i class="fas fa-car-side"></i>
-                <h2>Vehicle Hub</h2>
+                <h2>Ridereminder</h2>
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="active"><i class="fas fa-home"></i> Dashboard</a>
